unpackaged/main/default/objects/ffirule__IntegrationRuleButton__c/ffirule__IntegrationRuleButton__c.object-meta.xml
<CustomObject>
    <customHelpPage>ffirule__helpintegrationrulebutton</customHelpPage>
    <label>ClickLink Button</label>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ClickLink Buttons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>