unpackaged/main/default/objects/ffirule__IntegrationRuleButton__c/fields/ffirule__DetailPageButton__c.field-meta.xml
<CustomField>
    <fullName>ffirule__DetailPageButton__c</fullName>
    <formula>IF( OR(ffirule__ListObject__c==null,ffirule__ListObject__c == '' ) ,

'&lt;apex:page standardController="' + ffirule__IntegrationRule__r.ffirule__SourceObject__c + '" extensions="ffirule.IntegrationRuleEngine" action="'+'{'+'!'+'convert'+'}'+'" lightningStylesheets="true"&gt;'+ BR() +'&lt;ffirule:IntegrationRule engine="'+'{'+'!'+'engine'+'}'+'"/&gt;'+ BR() + '&lt;/apex:page&gt;',

'&lt;apex:page standardController="' + ffirule__ListObject__c + '" extensions="ffirule.IntegrationRuleEngine" action="'+'{'+'!'+'convert'+'}'+'" lightningStylesheets="true"&gt;'+ BR() +'&lt;ffirule:IntegrationRule engine="'+'{'+'!'+'engine'+'}'+'"/&gt;'+ BR() + '&lt;/apex:page&gt;')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Detail Page Button</label>
    <type>Text</type>
</CustomField>