unpackaged/main/default/objects/ffirule__IntegrationRuleButton__c/fields/ffirule__IntegrationRule__c.field-meta.xml
<CustomField>
    <fullName>ffirule__IntegrationRule__c</fullName>
    <label>ClickLink Rule</label>
    <referenceTo>ffirule__IntegrationRule__c</referenceTo>
    <relationshipLabel>ClickLink Buttons</relationshipLabel>
    <relationshipName>IntegrationRuleButtons</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>