unpackaged/main/default/objects/ffirule__IntegrationRuleButton__c/fields/ffirule__ListObject__c.field-meta.xml
<CustomField>
    <fullName>ffirule__ListObject__c</fullName>
    <label>List Object</label>
    <length>80</length>
    <type>Text</type>
</CustomField>