unpackaged/main/default/objects/ffirule__IntegrationRuleButton__c/fields/ffirule__ListObjectSourceIDField__c.field-meta.xml
<CustomField>
    <fullName>ffirule__ListObjectSourceIDField__c</fullName>
    <label>List Object Source ID Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>