unpackaged/main/default/objects/ffirule__IntegrationRuleButton__c/fields/ffirule__VisualforcePage__c.field-meta.xml
<CustomField>
    <fullName>ffirule__VisualforcePage__c</fullName>
    <label>Visualforce Page</label>
    <length>250</length>
    <type>Text</type>
</CustomField>